feat: added file upload for db upfate; added analytics in admin dashboard
